# PipInspect

./: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
src/: __init__.py  requirements.txt
src/pkg_inspect/: __init__.py
src/pkg_inspect/pkg_functions/: __init__.py  functions.py
src/pkg_inspect/pkg_modules/: __init__.py  pkg_inspect.py  pkg_metrics.py  pkg_snapshot.py  pkg_versions.py
src/pkg_inspect/pkg_utils/: __init__.py  cli.py  exception.py  metadata.py  util_types.py  utils.py
tests/: test_pkg_inspect.py
