[metadata]
name = pkg_inspect
version = 0.2.3
author = Yousef Abuzahrieh
author_email = yousefzahrieh17@gmail.com
description = A package for inspecting Python packages and their versions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yousefabuz17/PkgInspect
download_url = https://github.com/yousefabuz17/PkgInspect.git
platforms = Windows, Linux, MacOS
license = Apache Software License
python_requires = >=3.8
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pkg_inspect = 
    *.py

[options.entry_points]
console_scripts =
    pkg-inspect = pkg_inspect.pkg_utils.cli:cli_parser